kubernetes/apps/storage/kantai1-samba/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kantai1-smb-internal
subsets:
  - addresses:
      - ip: 10.1.2.4
    ports:
      - port: 445
