kubernetes/apps/storage/kantai1-samba/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://crd.kantai.xyz/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kantai1-samba
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kantai1-samba
  egress:
    - toCIDR:
        - 10.1.0.0/16
      toPorts:
        - ports:
            - port: "445"
              protocol: ANY
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "445"
              protocol: ANY
  ingress:
    - fromCIDR:
        - 10.1.0.0/16
      toPorts:
        - ports:
            - port: "445"
              protocol: ANY
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "445"
              protocol: ANY
